--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     <meta name="twitter:image" content="https://ТВІЙ-ДОМЕН/preview.png" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R03TE5MZQ7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R03TE5MZQ7');
+</script>
   <body>
     <!-- Верхня панель керування, що залишається на місці під час прокрутки -->
     <header class="top-bar">
