--- a/index.html
+++ b/index.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aura — генеративна графіка</title>
-    <meta
-      name="description"
-      content="Генеруйте унікальні візерунки на основі дати та часу народження."
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Aura — генеративна графіка" />
-    <meta
-      property="og:description"
-      content="Генеруйте унікальні візерунки на основі дати та часу народження."
-    />
-    <meta property="og:image" content="https://ТВІЙ-ДОМЕН/preview.png" />
-    <meta property="og:url" content="https://ТВІЙ-ДОМЕН/" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Aura — генеративна графіка" />
-    <meta
-      name="twitter:description"
-      content="Генеруйте унікальні візерунки на основі дати та часу народження."
-    />
-    <meta name="twitter:image" content="https://ТВІЙ-ДОМЕН/preview.png" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-  </head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Aura — генеративна графіка</title>
+  <meta
+    name="description"
+    content="Aura — сервіс генеративної графіки. Створюйте унікальні візерунки на основі дати та часу народження."
+  />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Aura — генеративна графіка" />
+  <meta
+    property="og:description"
+    content="Створюйте унікальні візерунки на основі дати та часу народження."
+  />
+  <meta property="og:image" content="https://aura.bit.city/preview.png" />
+  <meta property="og:url" content="https://aura.bit.city/" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Aura — генеративна графіка" />
+  <meta
+    name="twitter:description"
+    content="Створюйте унікальні візерунки на основі дати та часу народження."
+  />
+  <meta name="twitter:image" content="https://aura.bit.city/preview.png" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://aura.bit.city/" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="assets/css/style.css" />
+
+  <!-- Favicon (опційно) -->
+  <link rel="icon" href="assets/img/favicon.png" type="image/png" />
+</head>
+
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-R03TE5MZQ7"></script>
 <script>
