--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Aura — генеративна графіка</title>
   <meta
     name="description"
-    content="Aura — сервіс генеративної графіки. Створюйте унікальні візерунки на основі дати та часу народження."
+    content="Aura — сервіс генеративної графіки. Створюйте унікальні візерунки на основі дати народження."
   />
 
   <!-- Open Graph -->
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Aura — генеративна графіка" />
   <meta
     property="og:description"
-    content="Створюйте унікальні візерунки на основі дати та часу народження."
+    content="Створюйте унікальні візерунки на основі дати народження."
   />
   <meta property="og:image" content="https://aura.bit.city/preview.png" />
   <meta property="og:url" content="https://aura.bit.city/" />
@@ -25,7 +25,7 @@
   <meta name="twitter:title" content="Aura — генеративна графіка" />
   <meta
     name="twitter:description"
-    content="Створюйте унікальні візерунки на основі дати та часу народження."
+    content="Створюйте унікальні візерунки на основі дати народження."
   />
   <meta name="twitter:image" content="https://aura.bit.city/preview.png" />
 
@@ -52,39 +52,63 @@
     <!-- Верхня панель керування, що залишається на місці під час прокрутки -->
     <header class="top-bar">
       <div class="top-bar__left" data-i18n="topBarLabel">Твоя дата народження</div>
-      <div class="top-bar__inputs" id="native-inputs">
-        <label class="visually-hidden" for="birth-date" data-i18n="dateLabel"
-          >Дата народження</label
-        >
-        <input id="birth-date" type="date" required />
-        <label class="visually-hidden" for="birth-time" data-i18n="timeLabel"
-          >Час народження</label
-        >
-        <input id="birth-time" type="time" step="60" />
+
+      <div class="top-bar__controls" id="native-date-controls">
+        <!-- DATE ROW (no time) -->
+        <div class="controls-row" id="controls-date-row" aria-label="Date controls">
+          <label for="dateInput" class="visually-hidden" data-i18n="date_label">Дата</label>
+          <input
+            id="dateInput"
+            type="date"
+            inputmode="numeric"
+            autocomplete="bday"
+            aria-describedby="dateHelp"
+            required
+          />
+
+          <button id="btnRun" class="launch-button" type="button" data-i18n="run_btn" disabled>
+            Запустити
+          </button>
+
+          <div class="spacer" aria-hidden="true"></div>
+
+          <label for="langSelect" class="visually-hidden" data-i18n="lang_label">Мова</label>
+          <select id="langSelect" aria-label="Language" data-i18n-attr="aria-label" data-i18n="lang_label">
+            <option value="ua">UA</option>
+            <option value="en">EN</option>
+          </select>
+
+          <button
+            id="btnHelp"
+            type="button"
+            class="info-button"
+            aria-haspopup="dialog"
+            aria-controls="info-modal"
+            data-i18n-attr="aria-label"
+            data-i18n="infoAriaLabel"
+          >
+            ?
+          </button>
+        </div>
+        <small id="dateHelp" class="hint" data-i18n="date_help">
+          Обери дату народження (без часу).
+        </small>
+        <div class="fallback-inputs" id="fallback-inputs" hidden>
+          <div class="fallback-group">
+            <label for="daySelect" data-i18n="fallbackDayLabel">День</label>
+            <select id="daySelect"></select>
+          </div>
+          <div class="fallback-group">
+            <label for="monthSelect" data-i18n="fallbackMonthLabel">Місяць</label>
+            <select id="monthSelect"></select>
+          </div>
+          <div class="fallback-group">
+            <label for="yearSelect" data-i18n="fallbackYearLabel">Рік</label>
+            <select id="yearSelect"></select>
+          </div>
+        </div>
       </div>
-      <!-- Контейнер для фолбеків, показується лише якщо браузер не підтримує типи date/time -->
-      <div class="top-bar__inputs fallback-inputs" id="fallback-inputs" hidden>
-        <div class="fallback-group">
-          <label for="fallback-day" data-i18n="fallbackDayLabel">День</label>
-          <select id="fallback-day"></select>
-        </div>
-        <div class="fallback-group">
-          <label for="fallback-month" data-i18n="fallbackMonthLabel">Місяць</label>
-          <select id="fallback-month"></select>
-        </div>
-        <div class="fallback-group">
-          <label for="fallback-year" data-i18n="fallbackYearLabel">Рік</label>
-          <select id="fallback-year"></select>
-        </div>
-        <div class="fallback-group">
-          <label for="fallback-hour" data-i18n="fallbackHourLabel">Година</label>
-          <select id="fallback-hour"></select>
-        </div>
-        <div class="fallback-group">
-          <label for="fallback-minute" data-i18n="fallbackMinuteLabel">Хвилина</label>
-          <select id="fallback-minute"></select>
-        </div>
-      </div>
+
       <div class="top-bar__toggles">
         <div
           class="toggle-group"
@@ -110,32 +134,7 @@
             Руни
           </button>
         </div>
-        <div
-          class="toggle-group"
-          id="lang-toggle"
-          role="group"
-          data-i18n-attr="aria-label"
-          data-i18n="langToggleAria"
-        >
-          <button type="button" class="toggle-button" data-lang="ua" data-i18n="langUA">
-            UA
-          </button>
-          <button type="button" class="toggle-button" data-lang="en" data-i18n="langEN">
-            EN
-          </button>
-        </div>
       </div>
-      <button id="launch" class="launch-button" disabled data-i18n="start">Запустити</button>
-      <button
-        id="info"
-        class="info-button"
-        aria-haspopup="dialog"
-        aria-controls="info-modal"
-        data-i18n-attr="aria-label"
-        data-i18n="infoAriaLabel"
-      >
-        ?
-      </button>
     </header>
 
     <!-- Головне полотно для рендеру сцен -->
@@ -156,8 +155,7 @@
           <h2 class="modal__title" id="info-modal-title" data-i18n="aboutTitle">Про проєкт</h2>
           <p class="modal__text" data-i18n-html="modalText">
             Цей сайт відкриває приховану геометрію вашого життя.<br />
-            На основі дати й часу народження народжується унікальний візерунок — візуальний відбиток вашої присутності у
-            Всесвіті.<br />
+            На основі дати народження народжується унікальний візерунок — візуальний відбиток вашої присутності у Всесвіті.<br />
             Це не просто анімація, а символ початку й таємниці, який завжди буде лише вашим.
           </p>
           <button class="modal__close" id="modal-close" data-i18n="modalClose">Добре</button>
