--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
             required
           />
 
+          <div class="gender-field">
+            <label for="gender" data-i18n="gender_label">Стать</label>
+            <select id="gender" name="gender">
+              <option value="unspecified" selected data-i18n="gender_unspecified">Не вказувати</option>
+              <option value="female" data-i18n="gender_female">Жіноча</option>
+              <option value="male" data-i18n="gender_male">Чоловіча</option>
+            </select>
+          </div>
+
           <button id="btnRun" class="launch-button" type="button" data-i18n="run_btn" disabled>
             Запустити
           </button>
@@ -167,6 +176,6 @@
     <script src="assets/js/utils/prng.js"></script>
     <script src="assets/js/scenes/lissajous.js"></script>
     <script src="assets/js/scenes/rune.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
   </body>
 </html>
