--- a/index.html
+++ b/index.html
@@ -118,23 +118,29 @@
             </div>
 
             <div class="topbar-section topbar-section--right">
-              <label for="langSelect" class="visually-hidden" data-i18n="lang_label">Мова</label>
-              <div class="select select--sm select--enhanced" aria-label="Мова інтерфейсу">
-                <select
-                  id="langSelect"
-                  aria-label="Language"
-                  data-i18n-attr="aria-label"
-                  data-i18n="lang_label"
-                >
-                  <option value="ua">UA</option>
-                  <option value="en">EN</option>
-                </select>
-                <div class="select__arrow" aria-hidden="true">
-                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <polyline points="6,9 12,15 18,9"></polyline>
-                  </svg>
+              <!--
+                Для перемикача мови додаємо видимий підпис, щоб елемент вирівнювався
+                з іншими селектами і був зрозумілий користувачу.
+              -->
+              <label class="field field--sm" for="langSelect">
+                <span class="field__label" data-i18n="lang_label">Мова</span>
+                <div class="select select--sm select--enhanced" aria-label="Мова інтерфейсу">
+                  <select
+                    id="langSelect"
+                    aria-label="Language"
+                    data-i18n-attr="aria-label"
+                    data-i18n="lang_label"
+                  >
+                    <option value="ua">UA</option>
+                    <option value="en">EN</option>
+                  </select>
+                  <div class="select__arrow" aria-hidden="true">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <polyline points="6,9 12,15 18,9"></polyline>
+                    </svg>
+                  </div>
                 </div>
-              </div>
+              </label>
 
               <label class="field field--sm" for="sceneSelect">
                 <span class="field__label" data-i18n="sceneToggleAria">Вибір сцени</span>
@@ -157,21 +163,28 @@
                 </div>
               </label>
 
-              <button
-                id="btnHelp"
-                type="button"
-                class="help-button"
-                aria-haspopup="dialog"
-                aria-controls="info-modal"
-                data-i18n-attr="aria-label"
-                data-i18n="infoAriaLabel"
-              >
-                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <circle cx="12" cy="12" r="10"></circle>
-                  <path d="m9,9a3,3,0,1,1,4,2.64v.36"></path>
-                  <circle cx="12" cy="19" r="1"></circle>
-                </svg>
-              </button>
+              <!--
+                Для кнопки довідки створюємо окреме поле з підписом, аби уникнути
+                візуального "просідання" і підвищити зрозумілість інтерфейсу.
+              -->
+              <div class="field field--button">
+                <span class="field__label" data-i18n="help_label">Довідка</span>
+                <button
+                  id="btnHelp"
+                  type="button"
+                  class="help-button"
+                  aria-haspopup="dialog"
+                  aria-controls="info-modal"
+                  data-i18n-attr="aria-label"
+                  data-i18n="infoAriaLabel"
+                >
+                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <circle cx="12" cy="12" r="10"></circle>
+                    <path d="m9,9a3,3,0,1,1,4,2.64v.36"></path>
+                    <circle cx="12" cy="19" r="1"></circle>
+                  </svg>
+                </button>
+              </div>
             </div>
           </div>
         </div>
