Refine scene switching and description generator

--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@
                     data-i18n-attr="aria-label"
                     data-i18n="sceneToggleAria"
                   >
-                    <option value="lissajous" data-i18n="sceneLissajous">Ліссажу</option>
-                    <option value="rune" data-i18n="sceneRune">Руни</option>
                     <option value="maya" data-i18n="sceneMaya">Майя</option>
+                    <option value="druids" data-i18n="sceneDruids">Друїди</option>
                   </select>
                   <div class="select__arrow" aria-hidden="true">
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -288,9 +287,8 @@
     <script src="assets/js/utils/prng.js"></script>
     <script src="assets/js/utils/tzolkin.js"></script>
     <script src="assets/js/utils/tzolkin-number.js"></script>
-    <script src="assets/js/scenes/lissajous.js"></script>
-    <script src="assets/js/scenes/rune.js"></script>
     <script src="assets/js/scenes/scene-maya.js"></script>
+    <script src="assets/js/scenes/scene-druids.js"></script>
     <script type="module" src="assets/js/main.js"></script>
   </body>
 </html>
