Add Manik Tone 11 override and single-language description UI

--- a/index.html
+++ b/index.html
@@ -228,15 +228,16 @@
             <div class="aura-desc__inner">
               <header class="aura-desc__header">
                 <h2 class="aura-desc__title" id="aura-desc-title">
-                  <span>Опис</span>
-                  <span>Description</span>
+                  <span data-role="desc-title-label">Опис</span>
                 </h2>
                 <p class="aura-desc__summary" data-role="desc-summary">
                   Оберіть дату народження, щоб отримати текстову інтерпретацію без перезапуску анімації.
                 </p>
               </header>
               <div class="aura-desc__meta" data-role="desc-meta">
-                <span class="aura-desc__tag" data-role="desc-title-tag">Очікування даних</span>
+                <div class="desc-tags" data-role="desc-tags">
+                  <span class="desc-chip" data-role="desc-title-tag">Очікування даних</span>
+                </div>
               </div>
               <div class="aura-desc__body" data-role="desc-body">
                 <p class="aura-desc__placeholder" data-role="desc-placeholder">
