Update SEO metadata and ignore local horoscope config

--- a/index.html
+++ b/index.html
@@ -4,33 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Aura — гороскоп Майя за датою народження (гліф і тон) | BIT.CITY</title>
+    <!-- Оновлені SEO-метатеги для просування запиту "Гороскоп Майя онлайн" -->
+    <!-- Основні мета-теги -->
+    <title>Гороскоп Майя онлайн — Дізнайся свій знак і значення дати народження | Aura</title>
     <meta
       name="description"
-      content="Обери свою дату народження — отримай персональний знак Майя (гліф і тон): коротке значення, підказка дня, посилання на повний опис."
+      content="Дізнайтесь свій гороскоп Майя за датою народження. Оберіть дату та відкрийте свій майянський знак, тон і архетип. Безкоштовний аналіз дати народження за календарем Майя."
+    />
+    <meta
+      name="keywords"
+      content="гороскоп майя, знак майя, дата народження, календар майя, архетип майя, гороскоп онлайн, знак долі, майянський календар, майя тлумачення, гороскоп безкоштовно"
     />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Aura — гороскоп Майя за датою народження (гліф і тон) | BIT.CITY" />
+    <meta
+      property="og:title"
+      content="Гороскоп Майя — Ваш знак і доля за датою народження"
+    />
     <meta
       property="og:description"
-      content="Обери свою дату народження — отримай персональний знак Майя (гліф і тон): коротке значення, підказка дня, посилання на повний опис."
+      content="Відкрийте таємницю свого народження за календарем Майя. Введіть дату і дізнайтесь, хто ви за майянським гороскопом: ваш архетип, енергія та життєвий шлях."
     />
-    <meta property="og:image" content="https://aura.bit.city/assets/img/og/aura-maya.png" />
+    <meta property="og:image" content="https://aura.bit.city/preview.png" />
     <meta property="og:url" content="https://aura.bit.city/" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Aura — гороскоп Майя за датою народження (гліф і тон) | BIT.CITY"
+      content="Твій гороскоп Майя — дізнайся свій архетип і знак"
     />
     <meta
       name="twitter:description"
-      content="Обери свою дату народження — отримай персональний знак Майя (гліф і тон): коротке значення, підказка дня, посилання на повний опис."
+      content="Безкоштовно дізнайся свій знак і долю за календарем Майя. Введи дату народження — і відкрий значення свого архетипу."
     />
-    <meta name="twitter:image" content="https://aura.bit.city/assets/img/og/aura-maya.png" />
+    <meta name="twitter:image" content="https://aura.bit.city/preview.png" />
 
     <!-- Canonical -->
     <link rel="canonical" href="https://aura.bit.city/" />
