Update Mayan horoscope meta description

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Гороскоп Майя онлайн — Дізнайся свій знак і значення дати народження | Aura</title>
     <meta
       name="description"
-      content="Дізнайтесь свій гороскоп Майя за датою народження. Оберіть дату та відкрийте свій майянський знак, тон і архетип. Безкоштовний аналіз дати народження за календарем Майя."
+      content="Дізнайтесь свій гороскоп Майя за датою народження. Введіть дату і відкрийте свій знак, тон і архетип. Безкоштовний аналіз дати народження за календарем Майя."
     />
     <meta
       name="keywords"
